--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "connectkit": "^1.6.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "^2.0.6"
+    "wagmi": "^2.1.1"
   },
   "devDependencies": {
     "typescript": "^5",
