--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.0.4",
+    "node-gyp": "^10.0.1",
     "react": "^18",
     "react-dom": "^18",
     "wagmi": "^2.1.1"
