test: adding node-gyp dep

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "14.0.4",
     "node-gyp": "^10.0.1",
+    "nopt": "^7.2.0",
     "react": "^18",
     "react-dom": "^18",
     "wagmi": "^2.1.1"
